sandbox/sndfile/10_-_Hello/sndfile.pp


 }
function sf_open_fd(fd:longint; mode:longint; sfinfo:PSF_INFO; close_desc:longint):PSNDFILE;cdecl;external;
function sf_open_virtual(sfvirtual:PSF_VIRTUAL_IO; mode:longint; sfinfo:PSF_INFO; user_data:pointer):PSNDFILE;cdecl;external;
{ sf_error () returns a error number which can be translated to a text
** string using sf_error_number().
 }
function sf_error(sndfile:PSNDFILE):longint;cdecl;external;
{ sf_strerror () returns to the caller a pointer to the current error message for
** the given SNDFILE.
 }
(* Const before type ignored *)
function sf_strerror(sndfile:PSNDFILE):Pchar;cdecl;external;
{ sf_error_number () allows the retrieval of the error string for each internal
** error number.
**
 }
(* Const before type ignored *)
function sf_error_number(errnum:longint):Pchar;cdecl;external;
{ The following two error functions are deprecated but they will remain in the
** library for the foreseeable future. The function sf_strerror() should be used
** in their place.
 }
function sf_perror(sndfile:PSNDFILE):longint;cdecl;external;
function sf_error_str(sndfile:PSNDFILE; str:Pchar; len:Tsize_t):longint;cdecl;external;
{ Allow the caller to retrieve information from or change aspects of the
** library behaviour.
 }
function sf_command(sndfile:PSNDFILE; command:longint; data:pointer; datasize:longint):longint;cdecl;external;
{ Return TRUE if fields of the SF_INFO struct are a valid combination of values.  }
(* Const before type ignored *)
function sf_format_check(info:PSF_INFO):longint;cdecl;external;
{ Seek within the waveform data chunk of the SNDFILE. sf_seek () uses
** the same values for whence (SEEK_SET, SEEK_CUR and SEEK_END) as
** stdio.h function fseek ().
** An offset of zero with whence set to SEEK_SET will position the
** read / write pointer to the first data sample.
** On success sf_seek returns the current position in (multi-channel)
** samples from the start of the file.
** Please see the libsndfile documentation for moving the read pointer
** separately from the write pointer on files open in mode SFM_RDWR.
** On error all of these functions return -1.
 }
type
  Txxxxx =  Longint;
  Const
    SF_SEEK_SET = SEEK_SET;
    SF_SEEK_CUR = SEEK_CUR;
    SF_SEEK_END = SEEK_END;


function sf_seek(sndfile:PSNDFILE; frames:Tsf_count_t; whence:longint):Tsf_count_t;cdecl;external;
{ Functions for retrieving and setting string data within sound files.
** Not all file types support this features; AIFF and WAV do. For both
** functions, the str_type parameter must be one of the SF_STR_* values
** defined above.
** On error, sf_set_string() returns non-zero while sf_get_string()
** returns NULL.
 }
(* Const before type ignored *)
function sf_set_string(sndfile:PSNDFILE; str_type:longint; str:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function sf_get_string(sndfile:PSNDFILE; str_type:longint):Pchar;cdecl;external;
{ Return the library version string.  }
(* Const before type ignored *)
function sf_version_string:Pchar;cdecl;external;
{ Return the current byterate at this point in the file. The byte rate in this
** case is the number of bytes per second of audio data. For instance, for a
** stereo, 18 bit PCM encoded file with an 16kHz sample rate, the byte rate
** would be 2 (stereo) * 2 (two bytes per sample) * 16000 => 64000 bytes/sec.
** For some file formats the returned value will be accurate and exact, for some
** it will be a close approximation, for some it will be the average bitrate for
** the whole file and for some it will be a time varying value that was accurate
** when the file was most recently read or written.
** To get the bitrate, multiple this value by 8.
** Returns -1 for unknown.
 }
function sf_current_byterate(sndfile:PSNDFILE):longint;cdecl;external;
{ Functions for reading/writing the waveform data of a sound file.
 }
function sf_read_raw(sndfile:PSNDFILE; ptr:pointer; bytes:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_write_raw(sndfile:PSNDFILE; ptr:pointer; bytes:Tsf_count_t):Tsf_count_t;cdecl;external;
{ Functions for reading and writing the data chunk in terms of frames.
** The number of items actually read/written = frames * number of channels.
**     sf_xxxx_raw		read/writes the raw data bytes from/to the file
**     sf_xxxx_short	passes data in the native short format
**     sf_xxxx_int		passes data in the native int format
**     sf_xxxx_float	passes data in the native float format
**     sf_xxxx_double	passes data in the native double format
** All of these read/write function return number of frames read/written.
 }
function sf_readf_short(sndfile:PSNDFILE; ptr:Psmallint; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_writef_short(sndfile:PSNDFILE; ptr:Psmallint; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_readf_int(sndfile:PSNDFILE; ptr:Plongint; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_writef_int(sndfile:PSNDFILE; ptr:Plongint; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_readf_float(sndfile:PSNDFILE; ptr:Psingle; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_writef_float(sndfile:PSNDFILE; ptr:Psingle; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_readf_double(sndfile:PSNDFILE; ptr:Pdouble; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_writef_double(sndfile:PSNDFILE; ptr:Pdouble; frames:Tsf_count_t):Tsf_count_t;cdecl;external;
{ Functions for reading and writing the data chunk in terms of items.
** Otherwise similar to above.
** All of these read/write function return number of items read/written.
 }
function sf_read_short(sndfile:PSNDFILE; ptr:Psmallint; items:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_write_short(sndfile:PSNDFILE; ptr:Psmallint; items:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_read_int(sndfile:PSNDFILE; ptr:Plongint; items:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_write_int(sndfile:PSNDFILE; ptr:Plongint; items:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_read_float(sndfile:PSNDFILE; ptr:Psingle; items:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_write_float(sndfile:PSNDFILE; ptr:Psingle; items:Tsf_count_t):Tsf_count_t;cdecl;external;
function sf_read_double(sndfile:PSNDFILE; ptr:Pdouble; items:Tsf_count_t):Tsf_count_t;cdecl;external;
(* Const before type ignored *)
function sf_write_double(sndfile:PSNDFILE; ptr:Pdouble; items:Tsf_count_t):Tsf_count_t;cdecl;external;
{ Close the SNDFILE and clean up all memory allocations associated with this
** file.
** Returns 0 on success, or an error number.
 }
function sf_close(sndfile:PSNDFILE):longint;cdecl;external;
{ If the file is opened SFM_WRITE or SFM_RDWR, call fsync() on the file
** to force the writing of data to disk. If the file is opened SFM_READ
** no action is taken.
 }
procedure sf_write_sync(sndfile:PSNDFILE);cdecl;external;
{ The function sf_wchar_open() is Windows Only!
** Open a file passing in a Windows Unicode filename. Otherwise, this is
** the same as sf_open().
 }
{$ifdef _WIN32}
(* Const before type ignored *)
function sf_wchar_open(wpath:Pwchar_t; mode:longint; sfinfo:PSF_INFO):PSNDFILE;cdecl;external;
{$endif}
{ Getting and setting of chunks from within a sound file.
**
** These functions allow the getting and setting of chunks within a sound file
** (for those formats which allow it).
**
** These functions fail safely. Specifically, they will not allow you to overwrite
** existing chunks or add extra versions of format specific reserved chunks but
** should allow you to retrieve any and all chunks (may not be implemented for
** all chunks or all file formats).
 }
{ The chunk identifier.  }
{ The size of the chunk identifier.  }
{ The size of that data.  }
{ Pointer to the data.  }
type
  PSF_CHUNK_INFO = ^TSF_CHUNK_INFO;
  TSF_CHUNK_INFO = record
      id : array[0..63] of char;
      id_size : dword;
      datalen : dword;
      data : pointer;
    end;

{ Set the specified chunk info (must be done before any audio data is written
** to the file). This will fail for format specific reserved chunks.
** The chunk_info->data pointer must be valid until the file is closed.
** Returns SF_ERR_NO_ERROR on success or non-zero on failure.
 }
(* Const before type ignored *)

function sf_set_chunk(sndfile:PSNDFILE; chunk_info:PSF_CHUNK_INFO):longint;cdecl;external;
{
** An opaque structure to an iterator over the all chunks of a given id
 }
type
{ Get an iterator for all chunks matching chunk_info.
** The iterator will point to the first chunk matching chunk_info.
** Chunks are matching, if (chunk_info->id) matches the first
**     (chunk_info->id_size) bytes of a chunk found in the SNDFILE* handle.
** If chunk_info is NULL, an iterator to all chunks in the SNDFILE* handle
**     is returned.
** The values of chunk_info->datalen and chunk_info->data are ignored.
** If no matching chunks are found in the sndfile, NULL is returned.
** The returned iterator will stay valid until one of the following occurs:
**     a) The sndfile is closed.
**     b) A new chunk is added using sf_set_chunk().
**     c) Another chunk iterator function is called on the same SNDFILE* handle
**        that causes the iterator to be modified.
** The memory for the iterator belongs to the SNDFILE* handle and is freed when
** sf_close() is called.
 }
(* Const before type ignored *)

function sf_get_chunk_iterator(sndfile:PSNDFILE; chunk_info:PSF_CHUNK_INFO):PSF_CHUNK_ITERATOR;cdecl;external;
{ Iterate through chunks by incrementing the iterator.
** Increments the iterator and returns a handle to the new one.
** After this call, iterator will no longer be valid, and you must use the
**      newly returned handle from now on.
** The returned handle can be used to access the next chunk matching
**      the criteria as defined in sf_get_chunk_iterator().
** If iterator points to the last chunk, this will free all resources
**      associated with iterator and return NULL.
** The returned iterator will stay valid until sf_get_chunk_iterator_next
**      is called again, the sndfile is closed or a new chunk us added.
 }
function sf_next_chunk_iterator(iterator:PSF_CHUNK_ITERATOR):PSF_CHUNK_ITERATOR;cdecl;external;
{ Get the size of the specified chunk.
** If the specified chunk exists, the size will be returned in the
**      datalen field of the SF_CHUNK_INFO struct.
**      Additionally, the id of the chunk will be copied to the id
**      field of the SF_CHUNK_INFO struct and it's id_size field will
**      be updated accordingly.
** If the chunk doesn't exist chunk_info->datalen will be zero, and the
**      id and id_size fields will be undefined.
** The function will return SF_ERR_NO_ERROR on success or non-zero on
** failure.
 }
(* Const before type ignored *)
function sf_get_chunk_size(it:PSF_CHUNK_ITERATOR; chunk_info:PSF_CHUNK_INFO):longint;cdecl;external;
{ Get the specified chunk data.
** If the specified chunk exists, up to chunk_info->datalen bytes of
**      the chunk data will be copied into the chunk_info->data buffer
**      (allocated by the caller) and the chunk_info->datalen field
**      updated to reflect the size of the data. The id and id_size
**      field will be updated according to the retrieved chunk
** If the chunk doesn't exist chunk_info->datalen will be zero, and the
**      id and id_size fields will be undefined.
** The function will return SF_ERR_NO_ERROR on success or non-zero on
** failure.
 }
(* Const before type ignored *)
function sf_get_chunk_data(it:PSF_CHUNK_ITERATOR; chunk_info:PSF_CHUNK_INFO):longint;cdecl;external;
{ __cplusplus  }
{$endif}
{ SNDFILE_H  }

implementation


end.
